<?xml version="1.0"?>
<package format="3">
  <name>nav6d_sim</name>
  <version>0.1.0</version>
  <description>Simulation utilities for nav6d planning and trajectory testing.</description>
  <maintainer email="user@example.com">nav6d_sim maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
